tests/integration/should-fail/NoStartPassage.twee
::MyPassage
This is a file without a Start passage

::MySecondPassage
It only contains passages with names that are not Start
